fix .atricels-colums text align

--- a/wp-content/themes/infinity-mag/rtl.css
+++ b/wp-content/themes/infinity-mag/rtl.css
@@ -186,3 +186,7 @@ body {
 	right: auto;
 	left: 25px;
 }
+
+.atricels-colums{
+	text-align: right;
+}
